# rgbd_ros_to_lcm

./: CMakeLists.txt
launch/: realsense_lcm_recorder.launch  realsense_lcm_republisher.launch  xtion_lcm_recorder.launch
src/: image_extractor.cpp  jpeg_utils.cpp
